--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hatri - Handicraft Marketplace</title>
-    <script async src="https://cse.google.com/cse.js?cx=b1706d60f59fe4dc1"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -43,7 +42,11 @@
                     <div class="hero-content">
                         <h1 class="hero-title">Discover Unique Handicrafts</h1>
                         <p class="hero-subtitle">Explore the beauty of traditional artistry</p>
-                        <a href="#" class="btn btn-primary btn-lg">Explore Collection</a>
+                        <div class="search-container mt-4">
+                            <script async src="https://cse.google.com/cse.js?cx=b1706d60f59fe4dc1"></script>
+                            <div class="gcse-search"></div>
+                        </div>
+                        <a href="#" class="btn btn-primary btn-lg mt-4">Explore Collection</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
