--- a/search-results.html
+++ b/search-results.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hatri - Handicraft Marketplace</title>
+    <title>Search Results - Hatri Handicraft Marketplace</title>
+    <script async src="https://cse.google.com/cse.js?cx=b1706d60f59fe4dc1"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <span class="brand-text">Hatri</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -21,53 +22,28 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="/#about">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <header id="home" class="hero-section">
-        <div id="video-background">
-            <div id="youtube-player"></div>
-        </div>
-        <div class="video-overlay"></div>
+    <div class="search-results-section">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="hero-content">
-                        <h1 class="hero-title">Discover Unique Handicrafts</h1>
-                        <p class="hero-subtitle">Explore the beauty of traditional artistry</p>
-                        <div class="search-container mt-4">
-                            <script async src="https://cse.google.com/cse.js?cx=b1706d60f59fe4dc1"></script>
-                            <div class="gcse-searchbox-only" data-resultsUrl="/search-results.html"></div>
-                        </div>
-                        <a href="#" class="btn btn-primary btn-lg mt-4">Explore Collection</a>
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="search-results-container">
+                        <div class="gcse-searchbox"></div>
+                        <div class="gcse-searchresults" data-queryParameterName="q"></div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                </div>
             </div>
         </div>
-    </header>
-
-    <section id="about" class="about-section">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-title">About Hatri Handicrafts</h2>
-                    <p class="section-description">
-                        Discover the rich heritage of Indian handicrafts through our carefully curated collection. 
-                        Each piece tells a story of tradition, craftsmanship, and artistic excellence.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+    </div>
 
     <footer class="footer">
         <div class="container">
@@ -79,8 +55,8 @@
                 <div class="col-md-4">
                     <h4>Quick Links</h4>
                     <ul class="footer-links">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/#about">About</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
