Fixed 404 error on search results page: - Updated search results URL to use relative path - Fixed navigation links in search-results.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p class="hero-subtitle">Explore the beauty of traditional artistry</p>
                         <div class="search-container mt-4">
                             <script async src="https://cse.google.com/cse.js?cx=b1706d60f59fe4dc1"></script>
-                            <div class="gcse-searchbox-only" data-resultsUrl="/search-results.html"></div>
+                            <div class="gcse-searchbox-only" data-resultsUrl="search-results.html"></div>
                         </div>
                         <a href="#" class="btn btn-primary btn-lg mt-4">Explore Collection</a>
                     </div>
